--- a/index.html
+++ b/index.html
@@ -59,6 +59,33 @@
 
 
 
+
+
+
+
+
+     <section class="we-are-gamer-container">
+             
+        <div class="we-are-gamer-img">
+            <img src="./images/pngwing 4.png" alt="" class="we-gamer-img">
+        </div>
+            
+
+        <div class="we-are-gamer-content">
+            <h2 class="content-heading">
+                We are gamer
+            </h2>
+            <p class="content-pera">
+                An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.
+            </p>
+            <button class="btn-sing more">know more</button>
+            <p class="content-pera2">Our purpose</p>
+            <h4 class="content-pera3">“unleash the gamer in everyone”</h4>
+        </div>
+
+
+     </section>
+
     </header>
 
 
